Add proto compilation and frameworking to pom.xml and add test